fixed overlay positioning, now need to make viewport meta tag not mess up the current formatting on mobile

--- a/JG10Spring/src/main/resources/static/css/style.css
+++ b/JG10Spring/src/main/resources/static/css/style.css
@@ -27,6 +27,7 @@
 	display:none;
 	opacity: 0;
 	background-color:black;
+	left:0;
 	width:100%;
 	height:100%;
 	position:absolute;
